--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       
       <div class="row">
 	<div class="">
-	  <div class="inline-block" style=" padding-top; 80px; width:100%;">
+	  <div class="inline-block" style="position: relative; padding-top; 80px; width:100%;">
 
 
 	    <div id="spinner" class="load-bar">
@@ -121,7 +121,7 @@
 	    </div>
 
 	    
-	    <div id="world-map-gdp" style="width: 880px; height: 500px; margin: auto;"></div>
+	    <div id="world-map-gdp" style="width: 880px; height: 500px; margin: 20px auto auto;"></div>
 	  </div>
 	</div>
 
