moved js files to separate folder

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
     <script src="libs/mapmill.js"> </script>
 
 
-    <script src="libs/cfg.js"> </script>
-    <script src="libs/service.js"> </script>
-    <script src="libs/main.js"> </script>    
+    <script src="js/cfg.js"> </script>
+    <script src="js/service.js"> </script>
+    <script src="js/main.js"> </script>    
     
   </body>
 
